--- a/index.html
+++ b/index.html
@@ -327,6 +327,9 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="Plotly.html">Plotly</a>
+</li>
+<li>
   <a href="Dashboard.html">Dashboard</a>
 </li>
 <li>
