final test for all parts

--- a/about.html
+++ b/about.html
@@ -251,6 +251,12 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="Plotly.html">Plotly</a>
+</li>
+<li>
+  <a href="Dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;jg5037@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
